[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/objects/tank/BaseTank.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/objects/tank/TankHUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/objects/tank/PlayerInfo.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/objects/Tank.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/tank/shoot.mp3" type="AudioStream" id=5]
[ext_resource path="res://src/objects/tank/EngineSound.gd" type="Script" id=6]
[ext_resource path="res://assets/sounds/tank/engine_heavy_fast_loop.mp3" type="AudioStream" id=7]
[ext_resource path="res://src/sound/MyAudioStreamPlayer2D.gd" type="Script" id=8]
[ext_resource path="res://src/objects/tank/OnlineLayer.gd" type="Script" id=9]
[ext_resource path="res://assets/sounds/tank/engine_heavy_fast_loop1.mp3" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/tank/lazer.mp3" type="AudioStream" id=11]
[ext_resource path="res://assets/sounds/tank/boost.mp3" type="AudioStream" id=12]
[ext_resource path="res://assets/sounds/tank/insiv.mp3" type="AudioStream" id=13]

[sub_resource type="Animation" id=1]
resource_name = "Flash"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:material:shader_param/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EngineSound/Idle:max_distance")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2000.0 ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("EngineSound/Idle:attenuation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="CircleShape2D" id=2]
radius = 704.727

[node name="Tank" groups=["players"] instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="PlayerInfo" parent="." index="0" instance=ExtResource( 3 )]
position = Vector2( 0, -130 )

[node name="BlackHealth" type="ColorRect" parent="PlayerInfo/Background/VBoxContainer/Control" index="0"]
margin_right = 150.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" parent="PlayerInfo/Background/VBoxContainer/Control" index="1"]
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="PlayerInfo/Background/VBoxContainer/Control" index="2"]
margin_top = -7.0
margin_right = 744.0
margin_bottom = 209.0
rect_scale = Vector2( 0.201577, 0.201577 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "100/100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShootCooldownTimer" type="Timer" parent="." index="1"]
wait_time = 0.35
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
anims/Flash = SubResource( 1 )

[node name="CameraTransform" type="RemoteTransform2D" parent="." index="3"]

[node name="ShootSound" type="Node2D" parent="." index="4"]

[node name="Lazer" type="AudioStreamPlayer" parent="ShootSound" index="0"]
stream = ExtResource( 11 )
volume_db = -10.0
script = ExtResource( 8 )

[node name="Normal" type="AudioStreamPlayer" parent="ShootSound" index="1"]
stream = ExtResource( 5 )
volume_db = -7.0
bus = "Sound"
script = ExtResource( 8 )

[node name="SkillSound" type="Node2D" parent="." index="5"]

[node name="Invis" type="AudioStreamPlayer" parent="SkillSound" index="0"]
stream = ExtResource( 13 )
volume_db = 11.0
script = ExtResource( 8 )

[node name="Boost" type="AudioStreamPlayer" parent="SkillSound" index="1"]
stream = ExtResource( 12 )
volume_db = 6.0
script = ExtResource( 8 )

[node name="EngineSound" type="Node2D" parent="." index="6"]
script = ExtResource( 6 )

[node name="Idle" type="AudioStreamPlayer" parent="EngineSound" index="0"]
stream = ExtResource( 10 )
volume_db = 24.0
bus = "Tank Engine"
script = ExtResource( 8 )
attenuation = 0.0

[node name="Fast" type="AudioStreamPlayer" parent="EngineSound" index="1"]
stream = ExtResource( 7 )
pitch_scale = 2.11
bus = "Tank Engine"
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="EngineSound" index="2"]

[node name="DetectionArea" type="Area2D" parent="." index="10"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea" index="0"]
position = Vector2( -6, 0 )
shape = SubResource( 2 )

[node name="OnlineLayer" type="CanvasLayer" parent="." index="11"]
script = ExtResource( 9 )

[node name="TankHUD" parent="OnlineLayer" index="0" instance=ExtResource( 2 )]

[node name="Boost" parent="OnlineLayer/TankHUD/SkillButton" index="0"]
visible = false

[node name="Zap" parent="OnlineLayer/TankHUD/SkillButton" index="1"]
visible = false

[node name="Invisible" parent="OnlineLayer/TankHUD/SkillButton" index="2"]
visible = false

[connection signal="timeout" from="ShootCooldownTimer" to="." method="_on_ShootCooldownTimer_timeout"]
[connection signal="tween_all_completed" from="EngineSound/Tween" to="EngineSound" method="_on_Tween_tween_all_completed"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="normal_shoot" from="OnlineLayer" to="." method="_on_shoot"]
[connection signal="railgun_shoot" from="OnlineLayer" to="." method="_on_shoot"]
[connection signal="skill_boost_press" from="OnlineLayer" to="." method="_on_OnlineLayer_skill_boost_press"]
[connection signal="skill_invisible_press" from="OnlineLayer" to="." method="_on_OnlineLayer_skill_invisible_press"]
[connection signal="skill_zap_press" from="OnlineLayer" to="." method="_on_OnlineLayer_skill_zap_press"]
[connection signal="spread_shoot" from="OnlineLayer" to="." method="_on_shoot"]
[connection signal="tracer_shoot" from="OnlineLayer" to="." method="_on_shoot"]
[connection signal="pressed" from="OnlineLayer/TankHUD/ShootButton/Normal" to="OnlineLayer" method="_on_Normal_pressed"]
[connection signal="pressed" from="OnlineLayer/TankHUD/ShootButton/Railgun" to="OnlineLayer" method="_on_Railgun_pressed"]
[connection signal="pressed" from="OnlineLayer/TankHUD/ShootButton/Tracer" to="OnlineLayer" method="_on_Tracer_pressed"]
[connection signal="pressed" from="OnlineLayer/TankHUD/ShootButton/Spread" to="OnlineLayer" method="_on_Spread_pressed"]
[connection signal="pressed" from="OnlineLayer/TankHUD/SkillButton/Boost" to="OnlineLayer" method="_on_Boost_pressed"]
[connection signal="pressed" from="OnlineLayer/TankHUD/SkillButton/Zap" to="OnlineLayer" method="_on_Zap_pressed"]
[connection signal="pressed" from="OnlineLayer/TankHUD/SkillButton/Invisible" to="OnlineLayer" method="_on_Invisible_pressed"]

[editable path="PlayerInfo"]
[editable path="OnlineLayer/TankHUD"]
